--- a/InsuranceWebApplication/InsuranceWebApplication.csproj
+++ b/InsuranceWebApplication/InsuranceWebApplication.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
@@ -14,6 +16,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CQRS\Users\Command\DeleteUser\" />
+    <Folder Include="CQRS\Users\Command\UpdateUser\" />
+    <Folder Include="CQRS\Users\Query\GetUserById\" />
+    <Folder Include="CQRS\Users\Query\GetAllUsers\" />
+    <Folder Include="CQRS\Users\Query\GetUserByName\" />
   </ItemGroup>
 
 </Project>
